--- a/style.css
+++ b/style.css
@@ -2,17 +2,22 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: black;
   color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #meta {
   float: left;
-  width: 560px;
-  height: 560px;
-  font-size: 30px;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  margin-right: 100px;
-  margin-top: 100px;
+    width: -webkit-fill-available;
+    margin: 0px 200px;
+    height: 560px;
+    font-size: 30px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
 }
 
 h2 {
@@ -43,7 +48,7 @@ button:hover {
   height: 560px;
   border: 2px solid black;
   float: right;
-  margin-right: 100px;
+
   margin-top: 100px;
   margin-bottom: 20px;
 }
@@ -67,6 +72,7 @@ button:hover {
 
 .wall {
   background-color: grey;
+  
 }
 
 .pac-man {
